--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 	<body>
 		<div id="sp-visible">
 			<ul class="sp-menu">
-				<li class="nav01"><a href="index.html">1111</a></li>
-				<li class="nav02"><a href="index.html">2222</a></li>
-				<li class="nav03"><a href="index.html">3333</a></li>
-				<li class="nav04"><a href="index.html">4444</a></li>
-				<li class="nav05"><a href="index.html">5555</a></li>
-				<li class="nav06"><a href="index.html">6666</a></li>
-				<li class="nav07"><a href="index.html">7777</a></li>
-				<li class="nav08"><a href="index.html">8888</a></li>
+				<li class="nav01"><img src="img/menu/ico_home.png"><a href="index.html"></a><p>1111</p></li>
+				<li class="nav02"><img src="img/menu/ico_home.png"><a href="index.html"></a><p>1111</p></li>
+				<li class="nav03"><img src="img/menu/ico_home.png"><a href="index.html"></a><p>1111</p></li>
+				<li class="nav04"><img src="img/menu/ico_home.png"><a href="index.html"></a><p>1111</p></li>
+				<li class="nav05"><img src="img/menu/ico_home.png"><a href="index.html"></a><p>1111</p></li>
+				<li class="nav06"><img src="img/menu/ico_home.png"><a href="index.html"></a><p>1111</p></li>
+				<li class="nav07"><img src="img/menu/ico_home.png"><a href="index.html"></a><p>1111</p></li>
+				<li class="nav08"><img src="img/menu/ico_home.png"><a href="index.html"></a><p>1111</p></li>
 			</ul>
 		</div>
 	</body>
