デモ説明追加 デモ用の説明見出し追加

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 				<li class="nav08"><img src="img/menu/ico_home.png"><a href="index.html"></a><p>1111</p></li>
 			</ul>
 		</div>
+		<h1>ブラウザの画面サイズを1000px以下にしてください</h1>
 	</body>
 </html>
